error fixes and reproducibility vignette update

--- a/vignettes/overview.Rmd
+++ b/vignettes/overview.Rmd
@@ -2,7 +2,7 @@
 title: "Overview"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{overview}
+  %\VignetteIndexEntry{Overview}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
