--- a/vignettes/reproducibility.Rmd
+++ b/vignettes/reproducibility.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Code to Reproduce Pearce and Zhou (2025)"
+title: "Reproducibility"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{reproducibility}
+  %\VignetteIndexEntry{Reproducibility}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -29,24 +29,24 @@ In this vignette, we provide code to reproduce the analyses presented in the pap
 
 The following code reproduces Figure 1.
 
-```{r fig.asp=0.3}
+```{r fig.asp=0.35}
 s <- 0.1
 g1a<-ggplot()+scale_x_continuous(limits=c(-3*s,1+3*s))+
   stat_function(fun = dnorm, args = list(mean = 0, sd =s))+
   stat_function(fun = dnorm, args = list(mean = 1, sd =s))+
-  theme_bw()+labs(x=" ",y="Density",title=expression(hat(sigma)~"=0.1"))+
+  theme_bw()+labs(x=" ",y="Density",subtitle=expression(hat(sigma)~"=0.1"))+
   theme(panel.grid.minor = element_blank(),panel.grid.major.y = element_blank())
 s <- 0.3
 g1b<-ggplot()+scale_x_continuous(limits=c(-3*s,1+3*s))+
   stat_function(fun = dnorm, args = list(mean = 0, sd =s))+
   stat_function(fun = dnorm, args = list(mean = 1, sd =s))+
-  theme_bw()+labs(x="Posterior Intervention Effects",y=NULL,title=expression(hat(sigma)~"=0.3"))+
+  theme_bw()+labs(x="Posterior Intervention Effects",y=NULL,subtitle=expression(hat(sigma)~"=0.3"))+
   theme(panel.grid.minor = element_blank(),panel.grid.major.y = element_blank())
 s <- 0.5
 g1c<-ggplot()+scale_x_continuous(limits=c(-3*s,1+3*s))+
   stat_function(fun = dnorm, args = list(mean = 0, sd =s))+
   stat_function(fun = dnorm, args = list(mean = 1, sd =s))+
-  theme_bw()+labs(x=" ",y=NULL,title=expression(hat(sigma)~"=0.5"))+
+  theme_bw()+labs(x=" ",y=NULL,subtitle=expression(hat(sigma)~"=0.5"))+
   theme(panel.grid.minor = element_blank(),panel.grid.major.y = element_blank())
 grid.arrange(g1a,g1b,g1c,nrow=1)
 ```
@@ -135,33 +135,47 @@ round(posterior_equal,2)
 ```
 The following code reproduces Figure 4: First, we calculate the posterior rank-clustering probability under a traditional model (i.e., assumption of distinct ranks). Second, we calculate the posterior rank-clustering probability based on the RaCE model. Third, we produce the figure.
 
-```{r fig.asp-0.5}
-post_ranks_traditional <- apply(t(apply(data,1,function(mu){rank(mu)})),2,
-                                function(rank){unlist(lapply(1:J,function(j){mean(rank==j)}))})
+```{r fig.asp-0.6}
+wang_ranks <- t(apply(data,1,function(mu){rank(mu)}))
+wang_ranks_probs <- apply(wang_ranks,2,function(rank){
+  sapply(1:J,function(j){mean(rank==j)})
+})
+race_ranks <- t(apply( mcmc[,paste0("mu",1:J)], 1, function(mu){
+  rank(mu,ties.method="min")
+}))
+race_ranks_probs <- apply(race_ranks,2,function(rank){
+  sapply(1:J,function(j){mean(rank==j)})
+})
 
-post_ranks <- apply(t(apply(mcmc[,paste0("mu",1:J)],1,function(mu){rank(mu,ties.method="min")})),2,
-                    function(rank){unlist(lapply(1:J,function(j){mean(rank==j)}))})
-
-g4a<-ggplot(melt(post_ranks_traditional),aes(x=Var1,y=factor(Var2),fill=value))+
-  geom_tile()+scale_y_discrete(limits=rev)+
-  scale_x_continuous(breaks=1:4,limits=c(.5,4.5))+
+g4a<-ggplot(melt(wang_ranks_probs),
+            aes(x=Var1,y=factor(Var2),fill=value)) +
+  geom_tile() + theme_minimal() +
+  scale_y_discrete(limits=rev) +
+  scale_x_continuous(breaks=1:4,limits=c(.5,4.5)) +
   scale_fill_gradient(low="white",high="black",limits=c(0,1))+
-  labs(x="Rank",y="Treatment",fill="Probability")+theme_minimal()+
+  labs(x="Rank",y="Treatment",fill="Probability")+
   theme(panel.grid = element_blank(),legend.position = "bottom")+
   geom_text(aes(x=Var1,y=factor(Var2),label=round(value,2)),
-            color=ifelse(melt(post_ranks_traditional)$value>0.4,"white","black"))
-g4b<-ggplot(melt(post_ranks),aes(x=Var1,y=factor(Var2,levels=paste0("mu",1:J),labels=paste0(1:J)),fill=value))+
-  geom_tile()+scale_y_discrete(limits=rev)+
-  scale_x_continuous(breaks=1:4,limits=c(.5,4.5))+
-  scale_fill_gradient(low="white",high="black",limits=c(0,1))+
-  labs(x="Rank",y="Treatment",fill="Probability")+theme_minimal()+
+        color=ifelse(melt(wang_ranks_probs)$value>0.4,"white","black"))
+
+g4b<-ggplot(melt(race_ranks_probs),
+            aes(x=Var1,y=factor(Var2,levels=paste0("mu",1:J),
+                                labels=paste0(1:J)),fill=value))+
+  geom_tile() + theme_minimal() +
+  scale_y_discrete(limits=rev) +
+  scale_x_continuous(breaks=1:4,limits=c(.5,4.5)) +
+  scale_fill_gradient(low="white",high="black",limits=c(0,1)) +
+  labs(x="Rank",y="Treatment",fill="Probability")+
   theme(panel.grid = element_blank(),legend.position = "bottom")+
-  geom_text(aes(x=Var1,y=factor(Var2,levels=paste0("mu",1:J),labels=paste0(1:J)),label=round(value,2)),
-            color=ifelse(melt(post_ranks_traditional)$value>0.4,"white","black"))
-plot_grid(plot_grid(g4a+theme(legend.position = "none"), g4b+theme(legend.position = "none"), 
+  geom_text(aes(x=Var1,y=factor(Var2,levels=paste0("mu",1:J),labels=paste0(1:J)),
+                label=round(value,2)),
+            color=ifelse(melt(race_ranks_probs)$value>0.4,"white","black"))
+
+plot_grid(plot_grid(g4a+theme(legend.position = "none"), 
+                    g4b+theme(legend.position = "none"), 
                     labels = c('A', 'B'), label_size = 12),
-          get_plot_component(g4a, 'guide-box-bottom', return_all = TRUE),nrow=2,rel_heights = c(.9,.1)
-)
+          get_plot_component(g4a, 'guide-box-bottom', return_all = TRUE),
+          nrow=2,rel_heights = c(.9,.1) )
 ```
 
 ## Reproduction of Case Study (Section 4)
@@ -201,24 +215,25 @@ mcmc <- mcmc_RCMVN(ybar = ybar, cov = cov,
 
 The following code chunk reproduces Figure 6, Figure 7, and Table 2: First, we calculate the values underpinning each graphic. Then, we create each in turn.
 
-```{r fig.asp=0.4, warning=FALSE}
+```{r fig.asp=0.45}
 # Figure 6
-g9a <- create_clustermatrix(data=cbind(0,wang_posterior),names=treatments,label_ranks=1)+
+g9a <- create_clustermatrix(data=cbind(0,wang_posterior),
+                            names=treatments,label_ranks=1)+
   theme(legend.position = "bottom")
 g9b <- create_clustermatrix(mcmc=mcmc,names=treatments,label_ranks = 1)
-plot_grid(plot_grid(g9a+theme(legend.position = "none"), g9b+theme(legend.position = "none"), 
-                        labels = c('A', 'B'), label_size = 12),
-              get_plot_component(g9a, 'guide-box-bottom', return_all = TRUE),nrow=2,rel_heights = c(.9,.1))
-
+plot_grid(plot_grid(g9a+theme(legend.position = "none"), 
+                    g9b+theme(legend.position = "none"), 
+                    labels = c('A', 'B'), label_size = 12),
+          get_plot_component(g9a, 'guide-box-bottom', return_all = TRUE),
+          nrow=2,rel_heights = c(.9,.1))
 # Figure 7
 g10a <- create_cumulativeranking(data=cbind(0,wang_posterior),names=treatments)+
-  theme(legend.position = "bottom")
+  theme(legend.position = "bottom") +
+  guides(color = guide_legend(nrow = 2))
 g10b <- create_cumulativeranking(mcmc=mcmc,names=treatments)
 plot_grid(plot_grid(g10a+theme(legend.position = "none"), g10b+theme(legend.position = "none"), 
                         labels = c('A', 'B'), label_size = 12),
               get_plot_component(g10a, 'guide-box-bottom', return_all = TRUE),nrow=2,rel_heights = c(.85,.15))
-
-
 # Table 2
 res_WANG <- calculate_SUCRA_MNBT(data = cbind(0,wang_posterior),
                                  confidence = 0.50, names = treatments)
@@ -234,10 +249,10 @@ The following code chunk reproduces the Figures 8--10 (Appendix B).
 ```{r fig.asp=0.4}
 createtrace_K(mcmc)+
   scale_x_continuous(breaks=seq(125000,250000,by=25000),
-                     labels=paste0(c(125, 150, 175,200,225,250),"k"))
+                     labels=paste0(seq(125,250,by=25),"k"))
 createtrace_mu(mcmc,names=treatments)+
   scale_x_continuous(breaks=seq(125000,250000,by=25000),
-                     labels=paste0(c(125, 150, 175,200,225,250),"k"))
+                     labels=paste0(seq(125,250,by=25),"k"))
 create_forestplot(mcmc=mcmc,names=treatments)
 ```
 
