--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -2,7 +2,7 @@
 title: "Tutorial"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{tutorial}
+  %\VignetteIndexEntry{Tutorial}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
